// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Snapshot тесты > default variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80"
>
  Default Badge
</div>
`;

exports[`Badge > Snapshot тесты > destructive variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground shadow hover:bg-destructive/80"
>
  Destructive Badge
</div>
`;

exports[`Badge > Snapshot тесты > info variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-info text-info-foreground shadow hover:bg-info/80"
>
  Info Badge
</div>
`;

exports[`Badge > Snapshot тесты > outline variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
>
  Outline Badge
</div>
`;

exports[`Badge > Snapshot тесты > secondary variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
>
  Secondary Badge
</div>
`;

exports[`Badge > Snapshot тесты > success variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-success text-success-foreground shadow hover:bg-success/80"
>
  Success Badge
</div>
`;

exports[`Badge > Snapshot тесты > warning variant соответствует snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-warning text-warning-foreground shadow hover:bg-warning/80"
>
  Warning Badge
</div>
`;
